--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -2524,107 +2524,107 @@ stories:
   domain: http://www.steamboatpilot.com/
   link: https://www.steamboatpilot.com/news/city-sees-slight-decrease-in-may-sales-tax/
 images:
-- name: school-clouds-church-clouds-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-ww2-dresden.jpg
-- name: stories-gears-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-smoking-cigarette.jpg
-- name: wind-mills-windmills-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-alien-goggles.jpg
-- name: oldtrain-oldtrain-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-creativity.jpg
-- name: subway-subway-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gred-mash.jpg
-- name: old-granary-field-oldhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-circuit.jpg
-- name: dragon-desert-desert-dragon-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-rain.jpg
-- name: paris-paris-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-pablo-blue.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
-- name: crypto-machine-bletchley-crypto-machine-bletchley-jap-wav-pr.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-jap-wav-pr.png
-- name: soldier-kneeling-26304845730-d4e495e25f-o-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-matrix.jpg
-- name: containership-containership-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purp-paper.jpg
-- name: old-gas-pumps-oldgaspumps-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purple-storm.jpg
-- name: bluelake-far-away-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-far-away-file-00-00-00-00.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-electricity.jpg
-- name: stories-new-40-45-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-40-45-800-500-0-max-0--5--5.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
+- name: power-lines-power-lines-empty-space-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-yellow-collage.jpg
+- name: school-clouds-church-clouds-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-attack-planes.jpg
+- name: old-door-lock-old-door-lock-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-two.jpg
 - name: old-house-oldhouse-umberto-bocc.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-umberto-bocc.jpg
-- name: abandonedbuildings_gred_mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_gred_mash.jpg
-- name: white-house-whitehouse-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-ww2-color.jpg
-- name: carry-load-carryload-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-emily-carr.jpg
-- name: supreme-court-supremecourt-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-diego-rivera1.jpg
-- name: border-crossing-bordercrossing-green-zuma.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-green-zuma.png
-- name: yosemite-yosemite-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-electricity.jpg
-- name: power-lines-power-lines-empty-space-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-free-woman.jpg
-- name: aws-s3-square-68-161-800-500-0-max-0--5--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-68-161-800-500-0-max-0--5--1-square.jpg
-- name: birdhouse-birdhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-really-hot.jpg
-- name: border-fence-border-fence-on-hill-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-satan-red.jpg
-- name: bluelake-bright-sand-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-bright-sand-file-00-00-38-67.jpg
-- name: legal-statue-legalstatue-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crunch-paper.jpg
-- name: white-house-whitehouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-matrix.jpg
-- name: paris-paris-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-cinnamon-rolls.jpg
-- name: razorcliff-razorcliff-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-marcel-duchamp.jpg
-- name: oldsmallboat-oldsmallboat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat.jpg
-- name: old-granary-field-granaryfield-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-umberto-bocc.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-space-pizza.jpg
-- name: store-on-corner-store-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-dali.jpg
-- name: oldhouse-granaryfield-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purple-pond.jpg
-- name: mosaic-face-mosaic-face-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-yellow-paper.jpg
-- name: border-crossing-bordercrossing-diego-rivera1.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-diego-rivera1.png
-- name: castle-on-hill-castle-on-hill-edinburgh-dry-skin.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dry-skin.JPG
-- name: nazi-invasion-IMG_8352.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8352.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
-- name: crow-crow-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dark-rain.jpg
-- name: oldcabin-oldcabin-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-pablo-blue.jpg
-- name: christianity-christianity-under-construction-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-copper-circuit-2.jpg
-- name: machine-road-machine-road-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-diego-rivera1.jpg
-- name: capital-battle-capitolbattle-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-mucha-mult.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-- name: cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
+- name: adam-smith-adam-smith-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-cinnamon-rolls.jpg
+- name: white-house-lawn-white-house-window-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-blue-granite.jpg
+- name: carry-load-carryload-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-deep-connections.jpg
+- name: ellis-island-ellis-island-room-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-wols.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-marcel-duchamp.jpg
+- name: store-on-corner-store-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-emily-carr.jpg
+- name: fence-mexico-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-kandinsky-bv.jpg
+- name: old-church-oldchurch-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dali-two.jpg
+- name: lincoln-memorial-lincolnmemorial-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-mucha-mult.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dry-skin.jpg
+- name: berlinwall-DSC-0084-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-deep-connections.jpg
+- name: powerlines-power-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-cinnamon-rolls.jpg
+- name: bordercrossing-bordercrossing-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-aqua.jpg
+- name: castle-wall-DSC-0067-dark-rain.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-rain.JPG
+- name: gypsymosaic-gypsy-eyes-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-yellow-paper.jpg
+- name: birdhouse-birdhouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-clean-view.jpg
+- name: meadowbutterfly-meadow-butterfly-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-satan-red.jpg
+- name: hollywood-building-hollywood-building-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crafty-painting.jpg
+- name: gypsy-wagon-gypsywagon-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-granite.jpg
+- name: eduardo-eduardo-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-bright-sand.jpg
+- name: downtown-trucksilo-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-colored-circuits.jpg
+- name: gypsy-wagon-gypsywagon-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-green-zuma.jpg
+- name: hollywood-building-hollywood-building-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-bright-sand.jpg
+- name: aws-s3-treeinhills-yellowtree-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-treeinhills-yellowtree-still-1200.jpg
+- name: window-window-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-nazi-poster.jpg
+- name: supreme-court-supremecourt-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-smoking-cigarette.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
+- name: machine-road-machine-road-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-smoking-cigarette.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-atari-missle.jpg
+- name: adam-smith-adam-smith-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-alberto-giacometti.jpg
+- name: aws-s3-deserthills-deserthills-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still-600.jpg
+- name: crow_space_pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_space_pizza.jpg
+- name: powerlines-power-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-green-zuma.jpg
+- name: oldcabin-store-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-spagetti-accident.jpg
+- name: subway-subway-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colored-circuits.jpg
+- name: stories-catacombs-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-blue-circuit-3.jpg
+- name: machine-road-machine-road-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-gan-vogh.jpg
+- name: fence-mexico-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-constitution.jpg
+- name: mosaic-face-mosaic-face-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dali-three.jpg
+- name: lincoln-memorial-lincolnmemorial-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dali-three.jpg
+- name: liberty-back-statue-liberty-back-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-satan-red.jpg
+- name: school-clouds-church-clouds-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-atari-asteroids.jpg
+- name: bordercrossing-bordercrossing-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-yellow-paper.jpg
+- name: razorcliff-razorcliff-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-emily-carr.jpg
+- name: power-lines-power-lines-empty-space-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purp-paper.jpg
+- name: white-house-lawn-white-house-lawn-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-smooth-ride.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
 ---
 Big Farms Find Easy Ways Around Trump Trade Aid Limits, Records Show.&nbsp;Cleere Prepares For Final Fireworks Display In Huntsville.&nbsp;Sale To Benefit Richling This Weekend.&nbsp;Sex Trafficking Program Aims To Raise Awareness, Teach Prevention Downriver.&nbsp;German Court Overturns Abortion Advertising Conviction.&nbsp;Deer Licenses Available, Lottery Held.&nbsp;Russian Defense Chief Says There Are Survivors Of Navy Fire.&nbsp;Elks Mark Flag Day.&nbsp;
